--- a/docs/ourExperience/english/grammar/learn1.mdx
+++ b/docs/ourExperience/english/grammar/learn1.mdx
@@ -3,7 +3,7 @@ id: learn1
 title: learn 1
 ---
 
-### ساختار های فعل go
+## ساختار های فعل go
 
 1. به همراه حرف اضافه `to`
 
@@ -39,7 +39,7 @@ We will go on a vacation next week.
 I go walking every day.
 ```
 
-### صحبت در مورد تصمیمات آینده
+## صحبت در مورد تصمیمات آینده
 
 1. بیان تصمیمات از قبل گرفته شده:
 
@@ -65,7 +65,7 @@ I'm flying to Russia on Wednesday.
 The sun is going down.It's going to be dark.
 ```
 
-### ساختار have و has
+## ساختار have و has
 
 به معنای **داشتن** و **خوردن** می باشد.
 
@@ -115,4 +115,89 @@ Does he have an expensive car?
 
 ``` text
 Have they got many books?
+```
+
+## زمان گذشته استمراری
+
+برای بیان عملی:
+1. که در گذشته در حال انجام بوده
+2. حدود زمانی آن مشخص نیست
+
+🎉 فعل `to be` در زمان حال: `am, is, are`
+
+🎉 فعل `to be` در زمان گذشته: `was, were`
+
+🎉 ساختار زمان گذشته استمراری:
+
+`فاعل + was/were + فعل + ing`
+
+``` text
+We were eating breakfast.
+```
+
+🎉 فعل `was` برای فاعل های مفرد و `were` برای فاعل های جمع
+
+روش منفی کردن :
+1. با اضافه کردن `not` بعد از `was/were`
+
+``` text
+They weren't buying clothes.
+```
+
+روش سوالی کردن با `wh`دارها :
+1. با جابه جایی فاعل و فعل `to be`
+
+``` text
+Were they listening to music?
+```
+
+روش سوالی کردن با `wh`دارها :
+1. قرار دادن کلمه پرسشی در ابتدای جمله
+2. قرار دادن فعل `to be`
+3. قرار دادن مابقی جمله
+``` text
+Where were you going?
+```
+
+## صفات مقایسه ای
+
+برای مقایسه اشیا، مکان ها و اشخاص
+
+صفات تفضیلی: یکی از طرفین از لحاظ داشتن صفتی، دارای برتری است.
+
+روش ساخت صفت تفضیلی:
+1. اگر صفت تک بخشی باشد:
+
+به آخر صفت `er` اضافه میکنیم:
+``` text
+old => older / young => younger
+```
+2. اگر صفت چند بخشی باشد:
+
+قبل از صفت `more` اضافه می کنیم:
+``` text
+expensive => more expensive / beautifull => more beautifull
+```
+3. اگر حرف آخر صفت `y` باشد: ( بدون در نظر گرفتن تک بخشی یا چند بخشی بودن )
+
+به آخر صفت `er` اضافه میکنیم:
+``` text
+funny => funnier / pretty => prettier / easy => easier
+```
+هنگام اضافه کردن `er`، حرف `y` به `i` تبدیل می شود.
+
+روش ساخت جملات مقایسه ای:
+1. با اضافه کردن `than` پس از صفت تفضیلی
+``` text
+This movie is more exciting than that one.
+```
+2. اگر حرف وسط از جروف صدادار ( `o, i, e, a, u` ) باشد:
+
+حرف آخر آن تکرار می شود:
+``` text
+thin => thinner / big => bigger
+```
+صفات تفضیلی بی قاعده:
+``` text
+good => better / bad => worse / little => less / many/much => more
 ```
