--- a/docs/ourExperience/react-native/react-native1.mdx
+++ b/docs/ourExperience/react-native/react-native1.mdx
@@ -51,4 +51,14 @@ title: بخش 1
     );
 };
  ```
+🎉 برای اینکه وارد حالت `developer tools` شویم، در `emulator` باید دکمه های `ctrl + m` را بزنیم و روی موبایل شخصی در `expo` باید گوشی را تکان دهیم و سپس گزینه `debug remote JS` را می زنیم
 
+حال می توان از `console.log` استفاده کنیم و لاگ کد ها را ببینیم
+
+همچنین می توان وارد بخش `sources` در مروگر شد و از حالت `debug` در آنجا استفاده کنیم.
+
+می توان از `watch` نیز برای معرفی `variable` هایمان استفاده کنیم ک بعد از معرفی، ب ما مقدار لحظه ای آن ها را میدهد.
+
+می توان پشت هر خطی از کد ها کلیک کنیم تا یک `indicator` پشت آن اضافه شود و هر وقت کد های ما اجرا شدن و ب آن نقطه رسید، `debugger` روند اجرای برنامه را متوقف کند و برای اینکه هر بار ک اجرای برنامه تمام می شود، دوباره ب `breakpoint`. مشخص شده برگردیم، باید برنامه را `reload` کنیم.
+
+فراموش نشود ک بعد از اتمام کارمان حتما دوباره `ctrl + m` و `stop remote debugging` را بزنیم چون باعث کاهش سرعت توسعه می شود.
