add more lessons to learn-b2

--- a/docs/experiences/english/cues/cues1.mdx
+++ b/docs/experiences/english/cues/cues1.mdx
@@ -4,15 +4,8 @@ title: مطالب کمکی
 ---
 
 زمانی که بخواهیم یک صفت را ب کار ببریم ک کس دیگری را تحت تاثیر آن قرار دهیم از `ing` استفاده می کنیم و اگر چیزی روی ما تاثیر بگذارد از `ed` استفاده می کنیم
-
-<div dir="ltr">
-
-```
-
+```text
     I'm impressed === تحت تاثیر قرار گرفتم
 
     I'm impressing === تحت تاثیر قرار می دهم
-
 ```
-
-</div>
