--- a/docs/experiences/english/grammar/learn-b1.mdx
+++ b/docs/experiences/english/grammar/learn-b1.mdx
@@ -3,7 +3,7 @@ id: learn-b1
 title: learn B1
 ---
 
-## افعال مرکب
+## افعال مرکب (Phrasal verb)
 از ترکیب
 1. یک فعل و حرف اضافه
 2. یک فعل و قید
@@ -354,6 +354,164 @@ I enjoy eating ice cream.
 He starts working at eight.
 She loves riding bicycle.
  They continued studying until 17.
+```
+
+## قیود so & such
+برای تشدید معنای صفت و قید ب کار می روند.
+
+### قید such
+
+قبل از یک اسم همراه با صفت می آید.
+```text
+She was such a good actress.
+it is such a cold day , isn't it?
+He shouldn't buy such expensive clothes.
+```
+
+### قید so
+
+قبل از یک صفت تنها یا یک قید می آید.
+```text
+He looks so lovely.
+She dresses so badly.
+You are so clever.
+```
+
+🎉 قبل از `many, much, little, few` نیز می آید.
+```text
+They had so much homework.
+My father has so many letters to type.
+We have so little money to buy a house.
+My boss had so few workers.
+```
+
+## (The infinitive 2) to مصدر با
+کاربرد های مصدر با `to`:
+1. بعد از فعل اصلی ( برای بیان هدف و قصد )
+```text
+They had a nurse to look after their sick mother.
+I came here to tell you the good news.
+```
+2. بعد از برخی افعال خاص
+
+این افعال عبارت اند از:
+```text
+agree / appear / decide / deserve / hope / learn / need / offer / plan / refuse
+```
+```text
+I hope to see you soon.
+We decided to go to the park.
+```
+3. بعد از برخی افعال و مفعول آن ها
+
+این افعال عبارت اند از:
+```text
+advise / allow / convince / encourage / invite / remind / request / require / tell / warn
+```
+```text
+We convinced them to join the class.
+My father is encouraging me to study more.
+```
+
+## جملات شرطی 2 (Conditional 2)
+جمله اول شرطی است و با `if` شروع می شود و جمله دوم جمله اصلی است.
+
+_**شرطی نوع دوم:**_
+
+برای بیان امور غیرممکن در زمان حال استفاده می شود.
+
+ساختار جملات شرطی نوع دوم:
+
+`فعل + would + فاعل + جمله گذشته ساده + if`
+```text
+If I knew his name, I would tell the police.
+If I had money, I would buy that piano.
+If you went to bed earlier, you would not be so tired.
+Even if i knew, I wouldn't tell you.
+```
+🎉 می توانیم در جمله شرط از **زمان گذشته استمراری** , **فعل `to be` زمان گذشته** نیز استفاده کنیم.
+```text
+If it wasn't raining, we would have lunch outside.
+If I were you, I wouldn't talk to him.
+```
+🎉 برای همه ضمائر می توانیم از `were` استفاده کنیم.
+
+می توانیم جای جمله شرط و جمله اصلی را عوض کنیم
+```text
+I would go if I were you.
+I would buy that piano if i had money.
+```
+شکل سوالی جملات شرطی نوع دوم
+```text
+Where would you like to live if you didn't live in paris?
+If you were in my shoes, what would you do?
+```
+
+##وجوه وصفی حال و گذشته (Participial adjectives)
+**وجوه وصفی حال**
+
+با اضافه کردن `ing` به آخر فعل ساخته می شوند.
+```text
+bore (کسل کردن) => boring(کسل کننده)
+worry(نگران بودن) => worrying(نگران کننده)
+```
+**وجوه وصفی گذشته**
+
+با اضافه کردن `ed` به آخر فعل ساخته می شوند.
+```text
+bore (کسل کردن) => bored(کسل)
+worry(نگران بودن) => worried(نگران)
+```
+وجوه وصفی همراه با `ing` --> حالت فاعلی دارند.
+
+وجوه وصفی همراه با `ed` --> حالت مفعولی دارند.
+```text
+This book excites me. => این کتاب مرا هیجان زده می کند
+1. This book is exciting. => این کتاب هیجان آور است
+2. I am excited. => من هیجان زده هستم
+
+Being alone bores me. => تنها بودن مرا کسل می کند
+1. Being alone is boring. => تنها بودن کسل کننده است
+2. I am bored. => من کسل هستم
+```
+
+## زمان گذشته کامل (Past perfect)
+برای بیان کاری که در گذشته قبل از کار دیگری انجام شده.
+
+ساختار زمان گذشته کامل:
+
+`شکل سوم فعل + had + فاعل`
+```text
+My sister had gone before I came home.
+Before we got to the airport, the plane had gone. ( قبل اینکه ما به فرودگاه برسیم، هواپیما رفته بود )
+Sara helped his grandma in the house because her father had told her so.
+The storm destroyed the sandcastle that we had built. ( طوفان نابود کرد قلعه شنی که ساخته بوده ایم )
+She watched a video after the children had gone to bed.
+The waiter brought a drink that I hadn't ordered.
+What had happened wasn't Tom's fault.
+```
+**روش منفی کردن**
+
+با اضافه کردن `not` بعد از `had`
+```text
+They hadn't eaten the food before I came.
+Before I could see her, She had not slept.
+```
+**روش سوالی کردن**
+
+با جابه جا کردن فاعل و `had`
+```text
+Had they eaten the fod before I came ?
+Had she slept before I could see her ?
+```
+**روش سوالی کردن با `wh`دار ها**
+
+1.قرار دادن کلمه پرسشی در ابتدای جمله
+2.قرار دادن `had`
+3.قرار دادن مابقی جمله
+```text
+How long had he watched TV ?
+How long had you waited to get on the bus ?
 ```
 
 ##
