add learn-b2 and change react-native-packages

--- a/docs/experiences/english/grammar/learn-b1.mdx
+++ b/docs/experiences/english/grammar/learn-b1.mdx
@@ -98,7 +98,7 @@ They would rather not play soccer.
 Would you rather stay in or go out?
 ```
 
-## نقل قول (1)
+## نقل قول 1 (Reported speech 1)
 برای بیان قول یا گفته یک شخص از آن استفاده میکنیم.
 
 انواع نقل قول:
@@ -385,7 +385,7 @@ We have so little money to buy a house.
 My boss had so few workers.
 ```
 
-## (The infinitive 2) to مصدر با
+## مصدر با to ا(The infinitive 2)
 کاربرد های مصدر با `to`:
 1. بعد از فعل اصلی ( برای بیان هدف و قصد )
 ```text
@@ -428,6 +428,7 @@ If I knew his name, I would tell the police.
 If I had money, I would buy that piano.
 If you went to bed earlier, you would not be so tired.
 Even if i knew, I wouldn't tell you.
+If he didn't graduate from university soon, he wouldn't start a so much exciting business.
 ```
 🎉 می توانیم در جمله شرط از **زمان گذشته استمراری** , **فعل `to be` زمان گذشته** نیز استفاده کنیم.
 ```text
@@ -447,7 +448,7 @@ Where would you like to live if you didn't live in paris?
 If you were in my shoes, what would you do?
 ```
 
-##وجوه وصفی حال و گذشته (Participial adjectives)
+## وجوه وصفی حال و گذشته (Participial adjectives)
 **وجوه وصفی حال**
 
 با اضافه کردن `ing` به آخر فعل ساخته می شوند.
@@ -473,6 +474,8 @@ This book excites me. => این کتاب مرا هیجان زده می کند
 Being alone bores me. => تنها بودن مرا کسل می کند
 1. Being alone is boring. => تنها بودن کسل کننده است
 2. I am bored. => من کسل هستم
+
+The movie seemed so exciting that I was encouraged to watch it. => آن فیلم به قدری هیجان انگیز به نظر می رسید که ترغیب شدم آن را ببینم
 ```
 
 ## زمان گذشته کامل (Past perfect)
@@ -492,7 +495,7 @@ What had happened wasn't Tom's fault.
 ```
 **روش منفی کردن**
 
-با اضافه کردن `not` بعد از `had`
+با اضافه کردن `not` بعد از `had` (زمان افعال تغییری نمی کند.)
 ```text
 They hadn't eaten the food before I came.
 Before I could see her, She had not slept.
@@ -514,4 +517,351 @@ How long had he watched TV ?
 How long had you waited to get on the bus ?
 ```
 
-##
+## نقل قول 2 (Reported speech 2)
+برای بیان قول یا گفته یک شخص استفاده می شود.
+
+انواع نقل قول:
+
+1. نقل قول مستقیم
+بیان کلمه به کلمه صحبت های شخص مورد نظر
+
+2. نقل قول غیر مستقیم
+انتقال مفهوم جمله و عدم بیان کلمه به کلمه صحبت های شخص مورد نظر
+
+### نقل قول غیر مستقیم
+1. عدم استفاده از علامت نقل قول " "
+2. تغییر زمان جمله نقل قول شده
+
+زمان حال ساده ---> زمان گذشته ساده
+
+زمان حال استمراری ---> زمان گذشته استمراری
+```text
+مستقیم
+She said, "My name is Sara."
+
+غیر مستقیم
+She said her name was Sara
+----------------------------------------------------------------
+مستقیم
+He told me, "I'm not going."
+
+غیر مستقیم
+He told me he was not going.
+```
+🎉 برخی ضمائر با توجه به نیاز باید تغییر کنند.
+```text
+مستقیم
+"I don't like the idea," he said.
+
+غیر مستقیم
+He said that he didn't like the idea.
+----------------------------------------------------------------
+مستقیم
+She said, "The car isn't at my house."
+
+غیر مستقیم
+She said the car wasn't at her house.
+----------------------------------------------------------------
+مستقیم
+My mother told me, "I'm working."
+
+غیر مستقیم
+My mother told me that she was working.
+----------------------------------------------------------------
+مستقیم
+He told me, "We're working."
+
+غیر مستقیم
+He told me they were working.
+```
+🎉 در نقل غیر مستقیم می توانیم قبل از گفته شخص از `that` استفاده کنیم ولی اجباری نیست.
+
+بعد از فعل `tell`:
+
+باید مفعول جمله قرار بگیرد.
+
+بعد از فعل `say`:
+
+نیازی به ذکر مفعول نیست و اگه خواستیم از مفعول استفاده کنیم باید به همراه حرف اضافه `to` استفاده شود.
+
+## جملات مجهول 2 (Passive voice 2)
+جملات معلوم: فاعل در جمله وجود دارد.
+
+جملات مجهول: فاعل در جمله وجود ندارد.
+
+### حال ساده
+ساختار مجهول در زمان حال ساده:
+
+`شکل سوم قعل + is/are + مفعول`
+```text
+He makes butter from milk.
+
+Butter is made from milk.
+----------------------------------------------
+People speak Portuguese in Brazil.
+
+Portuguese is Spoken in Brazil.
+```
+### گذشته ساده
+ساختار مجهول در زمان گذشته ساده:
+
+`شکل سوم قعل + was/were + مفعول`
+```text
+We opened the factory at nine o'clock.
+
+The factory was opened at nine o'clock.
+```
+### آینده ساده
+ساختار مجهول در زمان آینده ساده:
+
+`شکل سوم قعل + will be + مفعول`
+```text
+He will open the door.
+
+The door will be opened.
+----------------------------------------------
+My brother will meet you tomorrow.
+
+You will be met tomorrow.
+----------------------------------------------
+It's very unlikely that Tom will be fired.
+```
+###حال کامل
+ساختار مجهول در زمان حال کامل:
+
+`شکل سوم قعل + has/have + been + مفعول`
+```text
+I have sold all the tickets.
+
+All the tickets have been sold.
+----------------------------------------------
+They have told him not to be late.
+
+He has been told not to be late.
+----------------------------------------------
+They have stolen my wallet.
+
+My wallet has been stolen.
+----------------------------------------------
+It's like a weight has been lifted from my shoulders.
+```
+🎉 جهت تاکید بر فاعل، می توان فاعل را به همراه `by` در انتهای جمله اضافه کرد.
+```text
+Ali bought the car.
+
+The car is bought.
+
+The car is bought by Ali.
+----------------------------------------------
+Sara will bake the cake.
+
+The cake will be baked.
+
+The cake will be baked by Sara.
+```
+
+## آینده در گذشته (Future in the past)
+برای عمل برنامه ریزی شده در گذشته
+
+ساختار جملات آینده در گذشته:
+
+`شکل ساده فعل + was/were + going to + فاعل`
+```text
+I was going to visit my parents, but my car broke down. => من قصد داشتم به دیدن والدینم بروم، اما ماشینم خراب شد
+They were going to study art but they didn't
+He was going to go to the movies last week.
+We were going to go to college, but we decided not to go.
+Sara was going to tell me a secret, but she didn't.
+I was going to sell my car but no one wanted to buy it.
+I thought you were going to quit working for Tom.
+I had the feeling you were going to ask me that.
+```
+روش منفی کردن:
+
+با اضافه کردن `not` بعد از `was/were`
+```text
+She was not going to cook dinner.
+They weren't going to buy a house.
+They weren't going to come, but they changed their minds and came.
+```
+روش سوالی کردن:
+
+با جابه جایی `was/were` و فاعل
+```text
+Were they going to live in Iran?
+Was he gonna be a teacher?
+```
+روش سوالی کردن با `wh` دار ها:
+
+1. قرار دادن کلمه پرسشی در ابتدای جمله
+2. قرار دادن `was/were`
+3. قرار دادن مابقی جمله
+```text
+Where was she going to go yesterday?
+What were they gonna buy?
+What were you going to say? => قصد داشتی چه بگویی؟
+When were you going to tell me?
+```
+
+## حروف ربط 1 (Conjunctions 1)
+حروف ربط، دو جمله را با یکدیگر ترکیب می کنند و یک جمله جامع و یکپاچه می سازند.
+### حروف ربط هم پایه ساز (Coordinating conjunctions)
+شامل 7 حرف هستند.
+
+1. حرف ربط `and`
+
+برای اضافه کردن چیزی بر دیگری
+```text
+I like to read and I write in my notebook every day.
+```
+ 2. حرف ربط `but`
+
+برای بیان تضاد
+```text
+Television is a good hobby but it interferes with my studying.
+```
+3. حرف ربط `yet`
+
+برای بیان تضاد
+```text
+I always take a book to the park, yet I never read a single page.
+```
+4. حرف ربط `or`
+
+برای ارائه یک جایگزین یا انتخاب
+```text
+Would you rather read a book or watch a good TV show?
+```
+5. حرف ربط `nor`
+
+برای ارائه یک جایگزین منفی برای یک ایده منفی قبلی
+```text
+He didn't ask for help, nor did he allow me to help.
+```
+6. حرف ربط `for`
+
+برای بیان و توضیح دلیل و قصد
+```text
+I go to the park every day, for I want to see her face.
+```
+7. حرف ربط `so`
+
+برای بیان اثر و نتیجه
+```text
+I like to read, so my grammar is always good.
+```
+🎉 برای یادگیری بهتر این 7 حرف ربط می توان 2 کلمه `fan boys` را حفظ کرد.
+
+## قیود so, too, either, neither
+این قیود برای بیان موافقت با جملات و جلوگیری از تکرار استفاده می شوند.
+### قیود so و too
+برای بیان موافقت با یک جمله مثبت
+
+ساختار استفاده از `too`
+
+`too + فعل کمکی مورد نظر + فاعل`
+```text
+I am a teacher => I am too.
+```
+ساختار استفاده از `so`
+
+`فاعل + فعل کمکی مورد نظر + so`
+```text
+I am a teacher => So am I.
+```
+**روش تشخیص فعل کمکی:**
+
+اگر فعل جمله اصلی:
+1. فعل `to be` باشد
+
+استفاده از فعل `to be` مناسب
+```text
+She is a nurse.
+
+I am too. (منم همینطور)
+So am I.
+--------------------------------------------------
+They were at home.
+
+I was too.
+So was I.
+--------------------------------------------------
+We are cleaning our house.
+
+They are too.
+So are they.
+```
+2. زمان حال ساده باشد
+
+استفاده از `do` یا `does`
+
+3. زمان گذشته ساده باشد
+
+استفاده از `did`
+
+4. زمان حال کامل باشد
+
+استفاده از `have` و `has`
+```text
+I play soccer every day.
+
+I do too.
+So do I.
+--------------------------------------------------
+He watched TV last night.
+
+She did too.
+So did she.
+--------------------------------------------------
+They have passed the exam.
+
+We have too.
+So have we.
+```
+5. فعل کمکی (مدال) باشد
+
+استفاده از همان فعل کمکی (مدال)
+```text
+My father can drive at night.
+
+My father can too.
+So can my father.
+--------------------------------------------------
+Ali and Reza will travel to Paris next week.
+
+I will too.
+So will I.
+```
+### قیود either و neither
+برای بیان موافقت با یک جمله منفی
+
+ساختار استفاده از `either`
+
+`either + فعل کمکی مورد نظر + فاعل`
+```text
+I don't go to work. => I don't either.
+```
+ساختار استفاده از `neither`
+
+`فاعل + فعل کمکی مورد نظر + neither`
+```text
+I don't go to work. => Neither do I.
+```
+**روش تشخیص فعل کمکی:**
+دقیقا همانند قیود `too` و `so` می باشد.
+```text
+She isn't a nurse.
+
+I am not either.
+Neither am I.
+--------------------------------------------------
+He didn't watch TV last night.
+
+She didn't either.
+Neither did she.
+--------------------------------------------------
+We haven't done our homework.
+
+I haven't either.
+Neither have I.
+```
