--- a/docs/experiences/react-native/react-native-packages.mdx
+++ b/docs/experiences/react-native/react-native-packages.mdx
@@ -3,7 +3,7 @@ id: react-native-packages
 title: پکیج ها
 ---
 
-### expo-keep-awake
+## expo-keep-awake
 توسط این پکیج می توان مشخص کرد هنگام اجرا شدن یا وارد شدن به صفحه خاصی، صفحه گوشی تا زمان اجرا بودن یا ئر آن صفخه بودن، خاموش نشود
 
 بهتر است در صفخه یا هنکام اجرا شدن تابع خاصی این اتفاق بیوفتد و بهتر است در کامپوننت اصلی، `app` آن را قرار ندهیم.
@@ -14,4 +14,210 @@ title: پکیج ها
         useKeepAwake();
         ...
     }
+```
+
+## Navigation
+می توان توسط این پکیج `routing` را در `react native` پیاده سازی کرد ک حتما داکیومنت اصلی آن خوانده شود:
+
+[Navigation](https://reactnavigation.org/)
+```shell
+yarn add @react-navigation/native
+```
+حال اگر در `expo` کار می کنیم باید موارد زیر را نیز نصب کنیم:
+```shell
+expo install react-native-screens react-native-safe-area-context
+```
+اما اگر از خود `react native cli` استفاده می کنیم باید بجای دستور بالا از دستور زیر استفاده کنیم:
+```shell
+yarn add react-native-screens react-native-safe-area-context
+```
+حال می توان در پروژه خود یک فولدر ب نام `screens` (دلخواه) بسازیم و صفحاتی ک می خواهیم را در آن بسازیم و از این پکیج برای جابه جا شدن در آن ها استفاده کنیم.
+
+🎉 در `react native` به 2 صورت می توان از `navigation` استفاده کرد ک 1. `Drawer` و 2. `stack` می باشد ک اولی به صورت منوی کشویی می باشد و دومی هم می توان ب صورت لینک در جاهای مختلف برنامه استفاده کرد.
+
+در حالت کلی در این پکیج ما فقط `Drawer` را داریم و برای استفاده از `Stack` باید آن را نصب کنیم:
+```shell
+yarn add @react-navigation/stack
+```
+حال باید ب صورت زیر عمل کرد:
+
+1. ابتدا باید کل برنامه را داخل `NavigationContainer` پیچید (مانند `BrowserRouter` در ری اکت)
+```jsx
+import {NavigationContainer} from "@react-navigation/native";
+export default function App() {
+  return (
+    <NavigationContainer>
+      {/* routes */}
+    </NavigationContainer>
+  );
+}
+```
+2. حال باید از پکیج `stack` ک نصب کردیم استفاده کنیم و `route` هایمان را بسازیم ک ب صورت پیش فرض برای ما یک `header` می سازد:
+```jsx
+import { NavigationContainer } from "@react-navigation/native";
+import { createStackNavigator } from "@react-navigation/stack";
+import Home from "./screens/Home";
+import About from "./screens/About";
+
+const Stack = createStackNavigator();
+
+export default function App() {
+  return (
+    <NavigationContainer>
+      <Stack.Navigator>
+        <Stack.Screen name="Home" component={Home} />
+        <Stack.Screen name="About" component={About} />
+      </Stack.Navigator>
+    </NavigationContainer>
+  );
+}
+```
+ک در اینجا `name` اجباری می باشد و در هر صفحه و کامپوننتی باید از نام آن ها برای جابه جا شدن کاربر استفاده کنیم.
+
+🎉 همچنین یک پکیج دیگر ب نام `react-navigation/native-stack` در داکیومنت های خود `navigation` وجود دارد ک می توان بجای این پکیج استفاده کرد ک سرعت بالا تری دارد اما زیاد نمی توان آن را شخصی سازی کرد.
+
+3. حال در هر کدام از صفحات می توان از `props` هایی ک خود `NavigationContainer` می فرستد استفاده کرد و دکمه برای جابه جایی بین صفحات قرار داد:
+```jsx
+export default function Home(props) {
+  const {navigation} = props;
+  return (
+    <View style={styles.container}>
+      <Text>Home</Text>
+      <Button title="Move to About" onPress={() => navigation.navigate("About")}/>
+    </View>
+  );
+}
+```
+🎉 مواردی ک ارسال می شود توسط `NavigationContainer` شامل موارد بسیاری می باشد ک اگر لاگ بگیریم، موارد زیادی دارد ک همه تابع هستند:
+
+`canGoBack`:
+برای چک کردن زمانی ک آیا می توان ب صفحه قبل بازگشت یا خیر
+
+`goBack`:
+زمانی ک بخواهیم ب یک صفحه قبل بگردیم
+
+`isFocused`:
+زمانی ک بخواهیم چک کنیم ک آیا کاربر در صفحه مورد نظر ما است
+
+`navigate`:
+برای جابه جا شدن ب صفحه ای ک ما مشخص می کنیم
+
+`pop`:
+برای حذف یک صفحه ک به `stack` پوش شده است (در واقع `stack` یک استوانه است ک صفحات ب آن `push` می شوند و صفحات جدید روی صفحات قبلی قرار می گیرند یعنی از ته پر می شود. )
+
+`popToTop`:
+برای زمانی ک بخواهیم کل موارد داخل `stack` را حذف کنیم و مستقیما ب آخرین صفحه برویم ک همان صفحه اول می باشد(یعنی اولین `push`).
+
+🎉 اگر از `push` استفاده کنیم، در واقع ب `stack` یک صفحه ای را اضافه کرده ایم و فرق این با `navigate` در این است ک `push` می تواند صفحه ای ک در آن هستیم را دوباره ب `stack` ب تعداد دلخواه اضافه کند و صفحه را `reload` می کند ک در این حالت می توان توسط `goBack` در صفحات اضافه شده در `stack` جابه شویم و همان صفحه را دوباره ببینیم فقط با این فرق ک انگار صفحه `reload` می شود.
+
+`replace`:
+زمانی استفاده می شود ک بخواهیم مثلا در صفحه لاگین، بعد از ورود کاربر، دیگر دکمه بازگشتی نمایش داده نشود و صفحه مورد نظر ما بشود اولین صفحه `stack` مان
+
+### send prop to another page
+ما می توانیم به صورت بین صفحات، داده ارسال کنیم:
+```jsx
+// Home.jsx
+<Button title="Move to Details" onPress={() => navigation.navigate("Details", {id: 1, text: "Hello"})}/>
+```
+و ب این شکل داده را در صفحه مورد نظر توسط `route` آن را دریافت کنیم:
+```jsx
+export default function Details({route}) {
+  const {id, text} = route.params;
+  return (
+    <View style={styles.container}>
+      <View style={styles.separator}>
+        <Text>{id}</Text>
+        <Text>{text}</Text>
+      </View>
+    </View>
+  );
+}
+```
+🎉 همچنین می توان در `app.jsx` نیز هنگام تعریف `stack` مورد نظر، برای آن یک `initialParams` نیز تعریف کنیم ک اگر داده ما وجود نداشت، داده ثابت ما نمایش داده شود:
+```jsx
+// app.jsx
+<Stack.Screen name="Details" component={Details} initialParams={{id: 3, text: "Bye Bye"}} />
+```
+### header style
+ما می توانیم به صورت زیر ب `header` صفحاتمان استایل بدهیم و این استایل را می توان صفحه ب صفحه بدهیم و یا ب صورت کلی یک استایل را برای همه اعمال کنیم:
+```jsx
+    <NavigationContainer>
+      <Stack.Navigator
+        screenOptions={{
+          headerTitleAlign: "center",
+          headerTintColor: "#fff",
+          headerStyle: {
+            backgroundColor: "#f4511e",
+          },
+          headerTitleStyle: {
+            fontWeight: "bold",
+          },
+        }}>
+        <Stack.Screen name="Home" component={Home} options={{
+            title: "خانه",
+            headerStyle: {
+              backgroundColor: "red"
+            }
+          }} />
+        <Stack.Screen name="About" component={About} />
+        <Stack.Screen name="Details" component={Details} initialParams={{ id: 3, text: "Bye Bye" }} options={{
+            title: "جزئیات",
+          }}
+        />
+      </Stack.Navigator>
+    </NavigationContainer>
+```
+🎉 می توان استایل های `screenOptions` را ک ب صورت عمومی ب همه ی صفحات اعمال می شود را برداریم و برای هر صفحه در قسمت `options` آن استایل ها را بدهیم و هر کدام را متفاوت قرار دهیم.
+
+همچنین موارد بیشتری برای تغییر دادن وجود دارد ک می توانیم خودمان تست کنیم و یا از مستندات استفاده کنیم.
+
+🎉 همچنین استایل هایی ک برای هر `route` قرار می دهیم، بر استایل هایی ک در `screenOptions` قرار می دهیم ارجعیت دارد.
+
+🎉 همچنین می توان از مواردی ک `props.navigation` در صفحات ب ما می دهد نیز برای تغییر `header` هر صفحه استفاده کنیم، مثلا با کلیک روی یک دکمه، رنگ و یا نوشته هدر ما تغییر کند:
+```jsx
+    // Details.jsx
+    <Button title='بروز رسانی هدر' onPress={() => navigation.setOptions({
+        title: "ممد"
+    })}/>
+```
+🎉 همچنین می توان در سمت راست یا چپ `header` نیز از یک کامپوننت استفاده کرد یا یک `jsx` خاص قرار داد تا نمایش دهد و حتی یک کار خاصی انجام دهد:
+```jsx
+        <Stack.Screen name="About" component={About}
+          options={{
+            headerRight: () => (
+              <Button title="Alert" color="orange" onPress={() => alert("سلام")}/>
+            ),
+          }} />
+```
+🎉 همچنین ما می توانیم یک کامپوننت را بجای `headerTitle` و جاهای دیگر نیز قرار دهیم و تمامی `props` هایی ک آن قسمت دارد را نیز برای آن کامپوننت بفرستیم تا در آنجا از آن ها استفاده کنیم:
+```jsx
+const LogoTitle = () => {
+  return (
+    <Image style={{width: 50, height: 50}} source={require("./assets/icon.png")}/>
+  )
+}
+export default function App() {
+  return (
+    <NavigationContainer>
+      <Stack.Navigator>
+        <Stack.Screen
+          name="Home"
+          component={Home}
+          options={{
+            title: "خانه",
+            headerStyle: {
+              backgroundColor: "red",
+            },
+            headerTitle: (props) => <LogoTitle {...props}/>
+          }}
+        />
+      </Stack.Navigator>
+    </NavigationContainer>
+  );
+}
+```
+### Drawer
+برای استفاده از `drawer` باید مانند `stack` ابتدا پکیج مربوط ب آن را از `navigation` نصب کنیم:
+```shell
+yarn add @react-navigation/drawer
 ```
