--- a/docs/experiences/react-native/react-native1.mdx
+++ b/docs/experiences/react-native/react-native1.mdx
@@ -3,19 +3,20 @@ id: react-native1
 title: بخش 1
 ---
 
-### تگ ها
+## Install
+توسط دستور زیر می توان `expo` را نصب کنیم:
+```shell
+npm install --global expo-cli
+```
+توسط دستور زیر می توان یک پروژه `expo` ساخت:
+```shell
+expo init first-project
+```
+🎉  حال باید `android studio` را نصب کنیم و سپس باید در سایت `soft98` فایل `java SE development kit` را دانلود کنیم (jdk)
 
-`View`:
-معادل همان `div` می باشد که برای مشخص کردن هر بخش از آن استفاده میکنیم.
-
-`Text`:
-معادل همان `p` می باشد که برای قرار دادن متن هایمان از آن استفاده می کنیم.
-
-`TouchableOpacity`
- در واقع توسط این تگ می توان المان هایی ماننده `Image` و `Text` را `touchable` کنیم و از رویداد هایی ماننده `onPress` برای آن ها استفاده کنیم.
+🎉 می توان از نرم افزار `expo Go` رو گوشی استفاده کرد برای کار کردن و نمایش خروجی و هم چنین می توان از `AVD` خود `Android Studio` نیز استفاده کرد تا یک مجازی ساز را روی سیستم نصب کند.
 
 ### Tips
-
 🎉 در `React Native` در واقع `flex` به صورت پیش فرض تمام عرض و ارتفاع باقی مانده را به خود اختصاص می دهد و می توان درون آن دوباره از `flex` برای فرزندان نیز استفاده کرد:
 
 ```jsx
@@ -51,6 +52,12 @@ title: بخش 1
     );
 };
  ```
+
+🎉 از دستور زیر می توان برای `reset` کردن `metro` استفاده کنیم:
+```shell
+npx react-native start --reset-cache
+```
+## debugging
 🎉 برای اینکه وارد حالت `developer tools` شویم، در `emulator` باید دکمه های `ctrl + m` را بزنیم و روی موبایل شخصی در `expo` باید گوشی را تکان دهیم و سپس گزینه `debug remote JS` را می زنیم
 
 حال می توان از `console.log` استفاده کنیم و لاگ کد ها را ببینیم
@@ -62,3 +69,15 @@ title: بخش 1
 می توان پشت هر خطی از کد ها کلیک کنیم تا یک `indicator` پشت آن اضافه شود و هر وقت کد های ما اجرا شدن و ب آن نقطه رسید، `debugger` روند اجرای برنامه را متوقف کند و برای اینکه هر بار ک اجرای برنامه تمام می شود، دوباره ب `breakpoint`. مشخص شده برگردیم، باید برنامه را `reload` کنیم.
 
 فراموش نشود ک بعد از اتمام کارمان حتما دوباره `ctrl + m` و `stop remote debugging` را بزنیم چون باعث کاهش سرعت توسعه می شود.
+
+ 🎉 ما می توانیم از نرم افزار های غیره هم برای مجازی ساز هم استفاده کنیم مثل : `nox player` و `blue stack` و غیره
+
+## publish in expo
+برای اینکه یک پروژه را روی سرور خود `expo` پابلیش کنیم و در دسترس دوستان و همکاران قرار دهیم بدون اینکه فایل نصبی آن را بسازیم، می توانیم ب صورت زیر عمل کنیم:
+
+1. ابتدا پروژه را اجرا می کنیم و سپس در مرورگر روی گزینه `Publish or republish project` کلیک میکنیم
+
+2. حال وارد ترمینال ادیتورمان می شویم و از همانجا وارد اکانت `expo` خودمان می شویم و یا اگر اکانتی نداریم، همانجا می توان ساخت و یا وارد سایت خود `expo` شد و یک اکانت جدید ساخت
+
+3. حال صبر میکنیم تا پروسه ساخت تمام شود و سپس با استفاده از لینکی ک `expo` در اختیارمان می گذارد، نرم افزار خودمان را ب اشتراک بگذاریم.
+
